--- a/package.json
+++ b/package.json
@@ -13,10 +13,19 @@
   "license": "ISC",
   "packageManager": "pnpm@10.10.0",
   "devDependencies": {
+    "@eslint/css": "0.8.1",
+    "@eslint/js": "9.27.0",
+    "@eslint/json": "0.12.0",
     "@types/node": "22.15.21",
+    "eslint": "9.27.0",
+    "eslint-config-prettier": "10.1.5",
+    "eslint-plugin-prettier": "5.4.0",
+    "globals": "16.1.0",
+    "prettier": "3.5.3",
     "tsup": "8.5.0",
     "tsx": "4.19.4",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.32.1"
   },
   "dependencies": {
     "dotenv": "16.5.0",
