--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "tsup src --out-dir build",
     "start": "node build/server.js",
-    "dev": "tsx --watch ./src/server.ts"
+    "dev": "tsx --watch ./src/server.ts",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -26,7 +28,9 @@
     "tsup": "8.5.0",
     "tsx": "4.19.4",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.32.1"
+    "typescript-eslint": "8.32.1",
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "3.1.4"
   },
   "dependencies": {
     "@prisma/client": "6.8.2",
