--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
     "start": "node build/server.js",
     "dev": "tsx --watch ./src/server.ts",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.10.0",
+  "packageManager": "pnpm@10.11.0",
   "devDependencies": {
     "@eslint/css": "0.8.1",
     "@eslint/js": "9.27.0",
     "@eslint/json": "0.12.0",
     "@types/node": "22.15.21",
+    "@vitest/coverage-v8": "3.1.4",
+    "@vitest/ui": "3.1.4",
     "eslint": "9.27.0",
     "eslint-config-prettier": "10.1.5",
     "eslint-plugin-prettier": "5.4.0",
